Bug 692742 - GCLI popup dialogs sometimes have scrollbars; f=paul; r=dcamp,dao
UltraBlame original commit: c9ef187ce6bdf7eb1f27ffd62808c646df7b87d4

--- a/browser/themes/gnomestripe/devtools/gcli.css
+++ b/browser/themes/gnomestripe/devtools/gcli.css
@@ -36,6 +36,9 @@
 
 
 
+
+
+
 .gcliterm-input-node,
 .gcliterm-complete-node {
   border: none;
@@ -44,12 +47,21 @@
   vertical-align: middle;
   background-color: transparent;
   font: 12px Consolas, "Lucida Console", monospace;
-  padding: 2px 0 0 16px;
+}
+
+.gcliterm-input-node {
+  padding-top: 2px;
+  padding-bottom: 0;
+  -moz-padding-start: 16px;
+  -moz-padding-end: 0;
 }
 
 .gcliterm-complete-node {
   color: #FFF;
-  padding: 4px 4px 2px 21px;
+  padding-top: 4px;
+  padding-bottom: 2px;
+  -moz-padding-start: 21px;
+  -moz-padding-end: 4px;
 }
 
 .gcliVALID {
@@ -75,35 +87,83 @@
   width: 100%;
 }
 
+.gcliterm-argfetcher {
+  display: -moz-box;
+  -moz-box-flex: 1;
+}
+
 .gcliterm-hint-node {
-  color: #000;
-  background: rgba(250, 250, 250, 0.8);
-  border: 1px solid #AAA;
-  border-bottom: 0px !important;
+  border-top: 1px solid threedshadow;
+  border-bottom: 1px solid #FFF;
+  border-left: 1px solid threedshadow;
+  border-right: 1px solid threedshadow;
   border-top-right-radius: 5px;
   border-top-left-radius: 5px;
-  margin-left: 10px;
-  margin-right: 10px;
-  display: inline-block;
-  overflow: auto;
-  padding: 10px;
+  margin-bottom: -1px;
 }
 
 .gcliterm-hint-parent {
-  border-bottom: 1px solid #AAA;
+  width: 300px;
+  padding: 10px 10px 0;
+  border-top: 1px solid threedshadow;
+  border-bottom: 1px solid threedshadow;
 }
 
 .gcliCmdHelpRight {
   text-align: right;
 }
 
+.gcliterm-menu {
+  display: -moz-box;
+  -moz-box-flex: 1;
+}
+
+.gcliterm-hint-nospace {
+  display: none;
+}
+
+
+
+
+
+
+
+.gcliterm-input-node,
+.gcliterm-complete-node,
+.gcliterm-display {
+  direction: ltr;
+}
+
+
+
+
+
+
+
+
+
+
+
+.gcliterm-hint-parent:-moz-locale-dir(rtl),
+.hud-output-node:-moz-locale-dir(rtl) {
+  direction: rtl;
+}
+
+
+
+
+
+.gcliArgFetcher {
+  width: 100%;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+}
 
 .gcliCmdDesc {
   font-weight: bold;
   text-align: center;
   margin-bottom: 5px;
-  border-bottom: 1px solid #ddd;
-  padding-bottom: 3px;
+  padding: 3px 10px 0;
 }
 
 .gcliParamGroup {
@@ -130,38 +190,28 @@
 }
 
 .gcliRequired {
-  font-size: 80%;
-  color: #666;
+  font-size: 90%;
+  color: #f66;
+  padding-left: 5px;
 }
 
 .gcliParams {
+  padding: 0 10px;
+  width: 100%;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+}
+
+.gcliField {
   width: 100%;
 }
 
 
-.gcliHintParent {
-  color: #000;
-  background: rgba(250, 250, 250, 0.8);
-  border: 1px solid #AAA;
-  border-top-right-radius: 5px;
-  border-top-left-radius: 5px;
-  margin-left: 10px;
-  margin-right: 10px;
-  display: inline-block;
+
+.gcliMenu {
+  width: 100%;
   overflow: hidden;
 }
-
-.gcliHints {
-  overflow: auto;
-  padding: 10px;
-  display: inline-block;
-}
-
-.gcliHints ul {
-  margin: 0;
-  padding: 0 15px;
-}
-
 
 .gcliOption {
   overflow: hidden;
@@ -175,7 +225,10 @@
 }
 
 .gcliOptionName {
-  padding-right: 5px;
+  padding-top: 0;
+  padding-bottom: 0;
+  -moz-padding-start: 10px;
+  -moz-padding-end: 2px;
 }
 
 .gcliOptionDesc {
@@ -186,31 +239,35 @@
 .gcliMenuError {
   overflow: hidden;
   white-space: nowrap;
-  padding: 8px 2px 2px 2px;
+  padding-top: 8px;
+  padding-bottom: 2px;
+  -moz-padding-start: 10px;
+  -moz-padding-end: 2px;
   font-size: 80%;
   color: red;
 }
 
 .gcliMenuField {
-  background-color: white;
-  color: black;
   border: 1px solid #aaa;
-  padding: 2px;
-  max-height: 300px;
-  overflow-y: auto;
-  max-width: 220px;
-  overflow-x: hidden;
-  margin: 0px 10px;
-  border-top: 0px !important;
+  border-top: 0;
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
+  max-height: 300px;
+  margin: 0 3px;
+  padding: 0;
 }
+
+#gcliOptTempl {
+  border-collapse: collapse;
+  width: 100%;
+  margin: 10px 0;
+}
+
 
 
 .gcliCompletion {
   position: absolute;
   z-index: -1000;
-  background-color: #DDD;
   border: 1px transparent solid;
   padding: 1px 1px 1px 2px;
 }
